--- a/app-repo.json
+++ b/app-repo.json
@@ -2,6 +2,7 @@
     "name": "X-Prime App Source",
     "subtitle": "Xp app source",
     "description": "X-prime app source",
+    "identifier": "app.xpapp.ios.repo"
     "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/icon.png",
     "headerURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/header.png",
     "website": "https://xprime.tv/",
@@ -14,10 +15,11 @@
             "name": "X-Prime",
             "bundleIdentifier": "com.XP-Team.XP",
             "developerName": "Xprime",
-            "subtitle": "An awesome app.",
-            "localizedDescription": "This is an awesome app only available on AltStore.",
+            "subtitle": "App for streaming.",
+            "localizedDescription": "An app for streaming content.",
             "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/Xp%20app%20icon.pngg",
             "tintColor": "#5CA399",
+            "category": "entertainment"
             "screenshots": [
                 {
                     "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/main.PNG",
@@ -43,7 +45,7 @@
             "versions": [
                 {
                     "version": "1.0.5",
-                    "buildVersion": "4",
+                    "buildVersion": "2",
                     "date": "2025-11-14T16:00:00-08:00",
                     "size": 20071417,
                     "downloadURL": "https://github.com/afyef/XP-App/releases/download/v1.0.5/XP.ipa",
@@ -51,42 +53,14 @@
                     "minOSVersion": "16.0"
                 },
                 {
-                    "version": "1.0.4",
-                    "buildVersion": "3",
-                    "date": "2025-11-11T18:00:00-08:00",
-                    "size": 20000000,
-                    "downloadURL": "https://github.com/afyef/XP-App/releases/download/v1.0.4/XP.ipa",
-                    "localizedDescription": "New features and bug fixes.",
-                    "minOSVersion": "16.0"
-                },
-                {
                     "version": "1.0.3",
-                    "buildVersion": "2",
+                    "buildVersion": "1",
                     "date": "2025-11-12T16:00:00-08:00",
                     "size": 18523365,
                     "downloadURL": "https://github.com/afyef/XP-App/releases/download/v1.0.3/XP.ipa",
                     "localizedDescription": "New features and bug fixes.",
                     "minOSVersion": "16.0"
-                },
-                {
-                    "version": "1.0.2",
-                    "buildVersion": "1",
-                    "date": "2025-11-11T07:00:00-08:00",
-                    "size": 10000000,
-                    "downloadURL": "https://github.com/afyef/XP-App/releases/download/v1.0.2/XP.ipa",
-                    "localizedDescription": "Initial release."
                 }
             ]
-        },
-    "news": [
-        {
-            "title": "Its here",
-            "identifier": "app_update",
-            "caption": "Introducing X-Prime app source",
-            "date": "2025-11-14",
-            "tintColor": "#9a41cd",
-            "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/icon.png",
-            "notify": false,
         }
-    ]
 }
