--- a/app-repo.json
+++ b/app-repo.json
@@ -34,7 +34,7 @@
           "date": "2025-11-10",
           "size": 94127627,
           "downloadURL": "https://github.com/afyef/XP-App/releases/download/v1.0.4/XP.ipa",
-          "localizedDescription": "Further improvements to overall system stability and other minor adjustments have been made to enhance the user experience."
+          "localizedDescription": "Initial commit"
         }
       ]
     }
