--- a/app-repo.json
+++ b/app-repo.json
@@ -12,7 +12,7 @@
       "developerName": "Xp Team",
       "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/icon.png",
       "localizedDescription": "An app for streaming content. ",
-      "subtitle": "An app for downloading and streaming video files.",
+      "subtitle": "An app for downloading and streaming video.",
       "tintColor": "#9a41cd",
       "category": "entertainment",
       "versions": [
