--- a/app-repo-backup.json
+++ b/app-repo-backup.json
@@ -1,5 +1,5 @@
 {
-  "name": "Xp App Repo",
+  "name": "Xp App Repo Back Up",
   "subtitile": "A home to Xp app",
   "identifier": "app.xpapp.ios.repo",
   "tintColor": "#9a41cd",
