--- a/app-repo-old.json
+++ b/app-repo-old.json
@@ -1,66 +1,36 @@
 {
-    "name": "X-Prime App Source",
-    "subtitle": "Xp app source",
-    "description": "X-prime app source",
-    "identifier": "app.xpapp.ios.repo"
-    "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/icon.png",
-    "headerURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/header.png",
-    "website": "https://xprime.tv/",
-    "tintColor": "#9a41cd",
-    "featuredApps": [
-        "com.XP-Team.XP",
-    ],
-    "apps": [
+  "name": "Xp App Repo",
+  "subtitile": "A home to Xp app",
+  "identifier": "app.xpapp.ios.repo",
+  "tintColor": "#9a41cd",
+  "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/icon.png",
+  "website": "https://xprime.tv/",
+  "apps": [
+    {
+      "name": "XP app",
+      "bundleIdentifier": "com.xpteam.xp",
+      "developerName": "Xp Team",
+      "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/icon.png",
+      "localizedDescription": "An app for streaming content. ",
+      "subtitle": "An app for downloading and streaming video.",
+      "tintColor": "#9a41cd",
+      "category": "entertainment",
+      "versions": [
         {
-            "name": "X-Prime",
-            "bundleIdentifier": "com.XP-Team.XP",
-            "developerName": "Xprime",
-            "subtitle": "App for streaming.",
-            "localizedDescription": "An app for streaming content.",
-            "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/Xp%20app%20icon.pngg",
-            "tintColor": "#5CA399",
-            "category": "entertainment"
-            "screenshots": [
-                {
-                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/main.PNG",
-                    "width": 1770,
-                    "height": 2532
-                }
-                {
-                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/search.PNG",
-                    "width": 1770,
-                    "height": 2532
-                }
-                {
-                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/about.PNG",
-                    "width": 1770,
-                    "height": 2532
-                }
-                {
-                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/Xprime-app-altstore-repo/refs/heads/main/favorites.PNG",
-                    "width": 1770,
-                    "height": 2532
-                }
-            ],
-            "versions": [
-                {
-                    "version": "1.0.5",
-                    "buildVersion": "2",
-                    "date": "2025-11-14T16:00:00-08:00",
-                    "size": 20071417,
-                    "downloadURL": "https://github.com/afyef/XP-App/releases/download/v1.0.5/XP.ipa",
-                    "localizedDescription": "Search babyyy.",
-                    "minOSVersion": "16.0"
-                },
-                {
-                    "version": "1.0.3",
-                    "buildVersion": "1",
-                    "date": "2025-11-12T16:00:00-08:00",
-                    "size": 18523365,
-                    "downloadURL": "https://github.com/afyef/XP-App/releases/download/v1.0.3/XP.ipa",
-                    "localizedDescription": "New features and bug fixes.",
-                    "minOSVersion": "16.0"
-                }
-            ]
+          "version": "1.0.5",
+          "date": "2025-11-14",
+          "size": 20071417,
+          "downloadURL": "https://github.com/afyef/XP-App/releases/download/v1.0.5/XP.ipa",
+          "localizedDescription": "Further improvements to overall system stability and other minor adjustments have been made to enhance the user experience."
+        },
+        {
+          "version": "1.0.4",
+          "date": "2025-11-10",
+          "size": 94127627,
+          "downloadURL": "https://github.com/afyef/XP-App/releases/download/v1.0.4/XP.ipa",
+          "localizedDescription": "Initial commit"
         }
+      ]
+    }
+  ]
 }
