--- a/app-repo-old.json
+++ b/app-repo-old.json
@@ -4,6 +4,7 @@
   "identifier": "app.xpapp.ios.repo",
   "tintColor": "#9a41cd",
   "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/refs/heads/main/icon.png",
+  "headerURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/refs/heads/main/header.png",
   "website": "https://xprime.tv/",
   "apps": [
     {
@@ -17,22 +18,22 @@
       "category": "entertainment",
             "screenshots": [
         {
-          "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/screenshots/main.png",
+          "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/main.png",
           "width": 1170,
           "height": 2532
         },
         {
-          "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/screenshots/about.png",
+          "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/about.png",
           "width": 1170,
           "height": 2532
         },
         {
-          "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/screenshots/search.png",
+          "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/search.png",
           "width": 1170,
           "height": 2532
         },
         {
-          "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/screenshots/search.png",
+          "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/search.png",
           "width": 1170,
           "height": 2532
         }
