--- a/app-repo-backup.json
+++ b/app-repo-backup.json
@@ -1,5 +1,5 @@
 {
-  "name": "XP App Repo",
+  "name": "XP App Repo for backup",
   "subtitle": "A home to XP App",
   "identifier": "app.xpapp.ios.repo",
   "tintColor": "#9a41cd",
