--- a/app-repo-backup.json
+++ b/app-repo-backup.json
@@ -12,7 +12,7 @@
       "bundleIdentifier": "com.xpteam.xp",
       "developerName": "XP Team",
       "subtitle": "An app for downloading and streaming video.",
-      "localizedDescription": "An app for streaming and downloading content.",
+      "localizedDescription": "Enjoy a vast library of movies and shows with this streaming app. Discover new releases and classic favorites across various genres, all in one place. Without the need of any subscription.",
       "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/refs/heads/main/icon.png",
       "tintColor": "#9a41cd",
       "category": "entertainment",
