--- a/app-repo.json
+++ b/app-repo.json
@@ -5,6 +5,7 @@
   "tintColor": "#9a41cd",
   "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/refs/heads/main/icon.png",
   "headerURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/refs/heads/main/header.png",
+  "description": "This is the unofficial AltStore Source for Xp App.\n\n Watch content without paying for subscriptions!",
   "website": "https://xprime.tv/",
   "apps": [
     {
@@ -12,7 +13,7 @@
       "bundleIdentifier": "com.xpteam.xp",
       "developerName": "XP Team",
       "subtitle": "An app for downloading and streaming video.",
-      "localizedDescription": "An app for streaming and downloading content.",
+      "localizedDescription": "Enjoy a vast library of movies and shows with Xp app. Discover new releases and classic favorites across various genres, all in one place. Without the need of any subscription./n/n App made by Afyef(Xprime), Icon by Simsalabim and source by BugHasRevenge",
       "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/refs/heads/main/icon.png",
       "tintColor": "#9a41cd",
       "category": "entertainment",
