--- a/app-repo-backup.json
+++ b/app-repo-backup.json
@@ -13,7 +13,7 @@
       "bundleIdentifier": "com.xpteam.xp",
       "developerName": "XP Team",
       "subtitle": "An app for downloading and streaming video.",
-      "localizedDescription": "Enjoy a vast library of movies and shows with this streaming app. Discover new releases and classic favorites across various genres, all in one place. Without the need of any subscription./n/n App made by Afyef(Xprime), Icon by Simsalabim and source by BugHasRevenge",
+      "localizedDescription": "Enjoy a vast library of movies and shows with Xp app. Discover new releases and classic favorites across various genres, all in one place. Without the need of any subscription./n/n App made by Afyef(Xprime), Icon by Simsalabim and source by BugHasRevenge",
       "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/refs/heads/main/icon.png",
       "tintColor": "#9a41cd",
       "category": "entertainment",
