--- a/app-repo.json
+++ b/app-repo.json
@@ -39,10 +39,15 @@
                     "height": 2532
                 }
             ],
-            "versions": "v1.0.5",
-            "versionDate": "2025-11-14",
-            "downloadURL": "https://github.com/afyef/XP-App/releases/download/v1.0.5/XP.ipa",
-            "versionDescription": "## \u2728 Enhancements\r\n\r\n- Added Search Functionality \u2014 issued by @afyef"
+            "versions": [
+            {
+              "version": "1.0.5",
+              "date": "2025-11-14",
+              "size": 20071417,
+              "downloadURL": "https://github.com/afyef/XP-App/releases/download/v1.0.5/XP.ipa",
+              "localizedDescription": "Further improvements to overall system stability and other minor adjustments have been made to enhance the user experience."
+            }
+        ]
         }
     ]
 }
