--- a/app-repo.json
+++ b/app-repo.json
@@ -41,7 +41,7 @@
             ],
             "versions": [
                 {
-                    "version": "v1.0.5",
+                    "version": "1.0.5",
                     "date": "2025-11-14",
                     "downloadURL": "https://github.com/afyef/XP-App/releases/download/v1.0.5/XP.ipa",
                     "size": 20071417,
