--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -2,7 +2,7 @@ name: Auto Update AltStore Source
 
 on:
   schedule:
-    - cron: "0 * * * *"       # Every hour
+    - cron: "*/30 * * * *"       # Every hour
   workflow_dispatch:          # Manual run
 
 jobs:
