--- a/app-repo.json
+++ b/app-repo.json
@@ -3,9 +3,9 @@
     "subtitle": "A home to XP App",
     "identifier": "app.xpapp.ios.repo",
     "tintColor": "#9a41cd",
-    "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/refs/heads/main/icon.png",
-    "headerURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/refs/heads/main/header.png",
-    "description": "This is the unofficial AltStore Source for Xp App.\n\n Watch content without paying for subscriptions!",
+    "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/icon.png",
+    "headerURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/header.png",
+    "description": "This is the unofficial AltStore Source for Xp App.\n\nWatch content without paying for subscriptions!",
     "website": "https://xprime.tv/",
     "apps": [
         {
@@ -13,8 +13,8 @@
             "bundleIdentifier": "com.xpteam.xp",
             "developerName": "XP Team",
             "subtitle": "An app for downloading and streaming video.",
-            "localizedDescription": "Enjoy a vast library of movies and shows with Xp app. Discover new releases and classic favorites across various genres, all in one place. Without the need of any subscription. /n /n App made by Afyef(Xprime), Icon by Simsalabim and source by BugHasRevenge",
-            "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/refs/heads/main/icon.png",
+            "localizedDescription": "Enjoy a vast library of movies and shows with Xp app. Discover new releases and classic favorites across various genres, all in one place. Without the need of any subscription.\n\nApp made by Afyef(Xprime), Icon by Simsalabim and source by BugHasRevenge",
+            "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/icon.png",
             "tintColor": "#9a41cd",
             "category": "entertainment",
             "screenshots": [
@@ -24,7 +24,7 @@
                     "height": 2532
                 },
                 {
-                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/refs/heads/main/about.png",
+                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/about.png",
                     "width": 1170,
                     "height": 2532
                 },
@@ -39,26 +39,25 @@
                     "height": 2532
                 }
             ],
-
             "news": [
-              {
-                "title": "Search tab",
-                "identifier": "new_feature",
-                "caption": "Introducing the search tab!",
-                "date": "2025-11-14",
-                "tintColor": "#9a41cd",
-                "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/refs/heads/main/header.png",
-                "notify": false,
-                "appID": "com.xpteam.xp"
-              },
+                {
+                    "title": "Search tab",
+                    "identifier": "new_feature",
+                    "caption": "Introducing the search tab!",
+                    "date": "2024-11-14",
+                    "tintColor": "#9a41cd",
+                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/header.png",
+                    "notify": false,
+                    "appID": "com.xpteam.xp"
+                }
             ],
             "versions": [
                 {
                     "version": "1.0.5",
-                    "date": "2025-11-14",
+                    "date": "2024-11-14",
                     "downloadURL": "https://github.com/afyef/XP-App/releases/download/v1.0.5/XP.ipa",
                     "size": 20071417,
-                    "localizedDescription": "## \u2728 Enhancements\n\n- Added Search Functionality \u2014 issued by @afyef"
+                    "localizedDescription": "## ✨ Enhancements\n\n- Added Search Functionality — issued by @afyef"
                 }
             ]
         }
