--- a/app-repo.json
+++ b/app-repo.json
@@ -47,7 +47,7 @@
                     "date": "2025-11-14",
                     "tintColor": "#9a41cd",
                     "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/header.png",
-                    "notify": false,
+                    "notify": true,
                     "appID": "com.xpteam.xp"
                 }
             ],
