--- a/app-repo.json
+++ b/app-repo.json
@@ -37,6 +37,11 @@
                     "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/search.png",
                     "width": 1170,
                     "height": 2532
+                },
+                {
+                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/downloads.png",
+                    "width": 588,
+                    "height": 1238
                 }
             ],
             "news": [
