--- a/app-repo.json
+++ b/app-repo.json
@@ -7,6 +7,28 @@
     "headerURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/assets/header.png",
     "description": "This is the unofficial AltStore Source for Xp App.\n\nWatch content without paying for subscriptions!",
     "website": "https://xprime.tv/",
+    "news": [
+                {
+                    "title": "Search tab",
+                    "identifier": "new_feature_1_0_5",
+                    "caption": "Introducing the search tab!",
+                    "date": "2025-11-14",
+                    "tintColor": "#9a41cd",
+                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/assets/header.png",
+                    "notify": true,
+                    "appID": "com.xpteam.xp"
+                },
+                {
+                    "title": "Downloading",
+                    "identifier": "downloading_1_0_6",
+                    "caption": "The download feature is working! \nGo check it out!",
+                    "date": "2025-11-16",
+                    "tintColor": "#9a41cd",
+                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/assets/header.png",
+                    "notify": true,
+                    "appID": "com.xpteam.xp"
+                }
+            ],
     "apps": [
         {
             "name": "XP App",
@@ -42,18 +64,6 @@
                     "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/assets/downloads.png",
                     "width": 588,
                     "height": 1238
-                }
-            ],
-            "news": [
-                {
-                    "title": "Search tab",
-                    "identifier": "new_feature_1_0_5",
-                    "caption": "Introducing the search tab!",
-                    "date": "2025-11-14",
-                    "tintColor": "#9a41cd",
-                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/assets/header.png",
-                    "notify": true,
-                    "appID": "com.xpteam.xp"
                 }
             ],
             "versions": [
