--- a/app-repo.json
+++ b/app-repo.json
@@ -35,7 +35,7 @@
             "bundleIdentifier": "com.xpteam.xp",
             "developerName": "XP Team",
             "subtitle": "An app for downloading and streaming content.",
-            "localizedDescription": "Enjoy a vast library of movies and shows with Xp app. Discover new releases and classic favorites across various genres, all in one place. Without the need of any subscription.\n\nApp made by Afyef(Xprime), Icon by Simsalabim and source by BugHasRevenge",
+            "localizedDescription": "Enjoy a vast library of movies and shows with Xp app. Discover new releases and your favorites across various genres, all in **one place**. Without the need of any subscriptions. \n**✨ Key Features:** \n**Watch content in 4K with Orbit Source**  (more servers coming soon!) \n**Offline Downloads Save your favorite movies and shows to watch.** \n**Sync with P-Stream Account** — Keep your library and watch history synced across devices Save Watch History — Easily pick up where you left off \n\nApp made by Afyef(Xprime), Icon by Simsalabim and source by BugHasRevenge",
             "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/assets/icon.png",
             "tintColor": "#9a41cd",
             "category": "entertainment",
@@ -51,12 +51,12 @@
                     "height": 2532
                 },
                 {
-                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/assets/search.png",
+                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/assets/downloads.png",
                     "width": 1170,
                     "height": 2532
                 },
                 {
-                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/assets/downloads.png",
+                    "imageURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/assets/seatch.png",
                     "width": 1170,
                     "height": 2532
                 },
