--- a/app-repo.json
+++ b/app-repo.json
@@ -6,7 +6,7 @@
     "iconURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/assets/app-icon.png",
     "headerURL": "https://raw.githubusercontent.com/BugHasRevenge/XprimeAppRepo/main/assets/top-header.png",
     "description": "This is the unofficial AltStore Source for Xp App.\n\nWatch content without paying for subscriptions!",
-    "website": "https://xprime.tv/",
+    "website": "https://pstream.mov/",
     "news": [
         {
             "title": "Search tab",
